add wait endpt
